# blog

./: .env.example  .gitignore  docker-compose.yml  main.py  pyproject.toml
app/: dependencies.py
app/controllers/: admin_bookmark_controller.py  admin_note_controller.py  admin_post_controller.py  admin_tag_controller.py  bookmark_controller.py  bookmarks_page_auth_controller.py  landing_controller.py  note_controller.py  page_controller.py  post_controller.py  search_controller.py  tag_controller.py  unlock_controller.py
app/core/: bookmarks_page_auth.py  config.py  database.py  database_service.py  html_utils.py  response.py  scheduler.py  security.py  slug_utils.py  unlock_utils.py  url_fetcher.py  url_utils.py
app/models/: __init__.py  admin_user.py  associations.py  blog_post.py  bookmark.py  content_unlock.py  note.py  tag.py
app/repositories/: admin_repository.py  base_repository.py  bookmark_repository.py  note_repository.py  post_repository.py  tag_repository.py  unlock_repository.py
app/schemas/: admin.py  bookmark.py  common.py  note.py  page.py  post.py  search.py  tag.py
app/services/: auth_service.py  base_service.py  bookmark_service.py  bookmark_url_check_service.py  content_helpers.py  note_service.py  post_service.py  search_service.py  tag_service.py  unlock_service.py
scripts/: test_bookmark_url_bypass.py
sql/: schema.sql
sql/migrations/: 001_add_bookmark_visit_count.sql  002_add_bookmark_soft_delete_and_url_check.sql  (+1 more)
templates/: bookmarks-unlock.html  bookmarks.html  index.html  landing.html  search.html  unlock.html
(+74 files in other folders)
