[project]
name = "blog"
version = "0.1.0"
description = "Personal blog with notes and bookmarks"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.138.0",
    "uvicorn>=0.49.0",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "jinja2>=3.1",
    "bcrypt>=4.0",
    "httpx>=0.28",
    "apscheduler>=3.10",
    "curl-cffi>=0.15.0",
    "playwright>=1.60.0",
]
